[FIX] website: fix `s_tabs` underline contrast issue
Before this commit, when using the "Tabs" snippet with the underline
layout and adding one of the darker color presets, there was a contrast
issue, particularly with the active state.

This commit fixes the contrast issue by ensuring that the active text
color dynamically inherits the appropriate color based on the background

task-4215783

--- a/addons/website/static/src/snippets/s_tabs/002.scss
+++ b/addons/website/static/src/snippets/s_tabs/002.scss
@@ -51,6 +51,9 @@
             .nav-link {
                 margin-bottom: -1px;
 
+                &.active {
+                    color: inherit;
+                }
                 &:not(.active) {
                     border: 0;
                 }
